# brownie-tracker

./: .gitignore  Cargo.toml  cloudformation.yaml  install.sh  machine-setup.sh  run.sh
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  Day.tsx  Login.tsx  Root.tsx  api.ts  main.tsx  utils.ts
deploy-files/: cron.sh  nginx.conf  setup.sh
src/: main.rs
