[package]
name = "brownie-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.47.0"
axum = "0.7.5"
bytes = "1.7.1"
chrono = "0.4.38"
git2 = "0.19.0"
serde = { version = "1.0.209", features = ["derive"] }
sqlite = "0.36.1"
tokio = { version = "1.39.3", features = ["full"] }
