[package]
name = "brownie-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bytes = "1.7.1"
chrono = "0.4.38"
git2 = { version = "0.19.0", features = ["vendored-openssl"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower = "0.4.13"
